test/integration/semantic/not_op.pal
{19,23,24}
{
    Test that operations work   ///
}
program test(input, output);
const
	foo = 'Party time aafter 415!!';
	bar = 'Shorter string';
type
	colour = (red,green,blue);
var
	i : integer;
	b : Boolean;
	r : real;
	c : colour;
begin
	// logical

	b := c and c;	// error
	b := b and b;
	b := b or b;
	b := not b;
	b := i or r;	// error
	b := i and r;	// error
end.
